--- a/misc/src/main/resources/application.yml
+++ b/misc/src/main/resources/application.yml
@@ -17,5 +17,11 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
   
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countSql
+  
 logging:
   config: classpath:logback-spring.xml
